# material_identification_upper_computer

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: windows-package.yml
.kilocode/rules/memory-bank/: architecture.md  context.md  product.md  tasks.md  tech.md
app/: __init__.py  main.py
app/business/: __init__.py  dispatcher.py  file_ingress.py  grouping.py  mapping.py
app/comm/: device_manager.py  protocol.py  pyserial_port.py  serial_port.py  session.py
app/devices/: printer.py
app/logs/: logger.py
app/storage/: config.py
configs/: default.json
data/work/: 40-50-6946761962003437137.txt  45-60-6946760090491688053-L.txt
docs/: 40-50-6946761962003437137.txt  60-80-6946810403067598064-L.txt  任务需求.md  通信约定.md
scripts/: build.bat
tests/: test_session_single_a1.py
